# mythrift

./: .gitignore  CMakeLists.txt  Makefile  README.md  shared.thrift
cmake/modules/: FindBoost.cmake  FindCppUnit.cmake  FindLibConfig.cmake  FindLog4cplus.cmake  FindMongo.cmake  FindThrift.cmake
docker/: Dockerfile  README.md
hello/: CMakeLists.txt
hello/app/: hello.cpp
hello/include/hello/: hello.h
hello/src/: hello.cpp
hello/test/: hello_test.cpp
hellolibconfig/: CMakeLists.txt
hellolibconfig/app/: example1.cpp  libconfiginvalid.cpp  libconfigupdate.cpp  libconfigwrite.cpp
hellolibconfig/data/: example.cfg  invalid.cfg
hellolog4cplus/: CMakeLists.txt
hellolog4cplus/app/: loghelloworld.cpp  loglevel.cpp  logmacros.cpp  logpatternlayout.cpp  logpropertyconfig.cpp  timeformat.cpp
hellolog4cplus/data/: log4cplus.properties.in
mongodb/: CMakeLists.txt
mongodb/app/: CMakeLists.txt  bsontest.cpp  connectest.cpp  connecttest.cpp  mongodbtest.cpp
mongodb/include/mongodb/: mongobase.h  mongodb.h
mongodb/src/: mongobase.cpp  mongodb.cpp
mongodb/test/: CMakeLists.txt  mongodb_test.cpp
runmythrift/: Dockerfile  README.md
script/: get_version.sh  get_version_major.sh  get_version_minor.sh  get_version_patch.sh
thriftgen/: CMakeLists.txt  tutorial.thrift
thriftgen/app/: CMakeLists.txt  Calculator_server.skeleton.cpp  SharedService_server.skeleton.cpp  client.cpp
thriftsample/: CMakeLists.txt
thriftsample/app/: CMakeLists.txt  Serv_server.skeleton.cpp  client.cpp
thriftsample/docs/: README.txt  student.thrift
thriftsample/src/: README.txt
thrifttutorial/: CMakeLists.txt
thrifttutorial/app/: CMakeLists.txt  Calculator_server.skeleton.cpp  calculatorserver.cpp  calculatorserver_threadpool.cpp  client.cpp  sharedserver.cpp
thrifttutorial/docs/: README.txt
thrifttutorial/include/thrifttutorial/: tutorial_types.cpp  tutorial_types.h
utils/: CMakeLists.txt
utils/app/: CMakeLists.txt
utils/include/utils/: log.h
utils/src/: log.cpp
