# lib
AUX_SOURCE_DIRECTORY(src/ MONGODBLIB_FILES)
ADD_LIBRARY(mongodblib SHARED ${MONGODBLIB_FILES})
SET_TARGET_PROPERTIES(
        mongodblib
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})
INSTALL(TARGETS mongodblib LIBRARY DESTINATION lib${LIB_SUFFIX})

IF (CPPUNIT_FOUND)

ENDIF (CPPUNIT_FOUND)

ADD_SUBDIRECTORY(app)
