AUX_SOURCE_DIRECTORY(include/thriftgen/ THRIFTGENLIB_FILES)
ADD_LIBRARY(thriftgenlib SHARED ${THRIFTGENLIB_FILES})
SET_TARGET_PROPERTIES(
        thriftgenlib
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})

INSTALL(TARGETS thriftgenlib LIBRARY DESTINATION lib${LIB_SUFFIX})

ADD_SUBDIRECTORY(app)