AUX_SOURCE_DIRECTORY(include/thriftsample/ THRIFTSAMPLELIB_FILES)
ADD_LIBRARY(thriftsamplelib SHARED ${THRIFTSAMPLELIB_FILES})
SET_TARGET_PROPERTIES(
        thriftsamplelib
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})
INSTALL(TARGETS thriftsamplelib LIBRARY DESTINATION lib${LIB_SUFFIX})

ADD_SUBDIRECTORY(app)
