AUX_SOURCE_DIRECTORY(include/thrifttutorial/ THRIFTGENLIB_FILES)
ADD_LIBRARY(thrifttutoriallib SHARED ${THRIFTGENLIB_FILES})
SET_TARGET_PROPERTIES(
        thrifttutoriallib
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})

INSTALL(TARGETS thrifttutoriallib LIBRARY DESTINATION lib${LIB_SUFFIX})

ADD_SUBDIRECTORY(app)